benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_ModExpPow2_iter10_error.log
=== Verification Error - Iteration 10 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_ModExpPow2.rs
Time: 2025-09-15 20:45:59

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:31:10
   |
31 |         (result as nat) == (a as nat) * (b as nat) % (m as nat)
   |          ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:43:10
   |
43 |         (result as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |          ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:31:10
   |
31 |         (result as nat) == (a as nat) * (b as nat) % (m as nat)
   |          ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:43:10
   |
43 |         (result as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |          ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
